<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/udalostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/nazov_udalosti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/titleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/napis_udalost"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/udalostTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/datePopisokText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/datum_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/vyber_si_d_tum_pre_poznamku"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePopisokText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />
    <TextView
        android:id="@+id/textPopisokCas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cas_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />


    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="209dp"
        android:layout_height="49dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/vyber_si_svoj_cas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPopisokCas"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_to_add_note_todolist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uloz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <ImageButton
        android:id="@+id/imageButton_vyberDatum"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/Description_ButtonPreDatum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toEndOf="@+id/textViewDate"
        app:layout_constraintTop_toBottomOf="@+id/datePopisokText"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_calendar_month_24"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/imageButton_vyberCas"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/Description_Button_vyberCas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/textViewTime"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_vyberDatum"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/baseline_access_time_24"
        tools:ignore="RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>